# ChangeLog for sys-apps/portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.17865 (06 Feb 2011)

  06 Feb 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17693.ebuild, +portage-2.2.01.17865.ebuild:
  Version bump, FreeMiNT fixes

*portage-2.2.01.17757 (02 Feb 2011)

  02 Feb 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17721.ebuild, +portage-2.2.01.17757.ebuild:
  Bump, hopefully with fixes for backtraces like bug #353395

*portage-2.2.01.17721 (30 Jan 2011)

  30 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17680.ebuild, +portage-2.2.01.17721.ebuild:
  Bump, updated 'no offset with helpers' check

  27 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17649.ebuild:
  Drop old

  26 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.17693.ebuild:
  Bump, repoman now has prefix.usedwithhelpers check added

*portage-2.2.01.17693 (26 Jan 2011)

  26 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.17693.ebuild:
  Bump, repoman now has prefix.usedwithhelpers check added

*portage-2.2.01.17680 (22 Jan 2011)

  22 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17583.ebuild, +portage-2.2.01.17680.ebuild:
  Version bump, matches portage-2.2.0_alpha19

*portage-2.2.01.17649 (18 Jan 2011)

  18 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17555.ebuild, +portage-2.2.01.17649.ebuild:
  Version bump, matches portage-2.2.0_alpha17

*portage-2.2.01.17583 (07 Jan 2011)

  07 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17422.ebuild, +portage-2.2.01.17583.ebuild:
  Version bump, matches portage-2.2.0_alpha14

*portage-2.2.01.17555 (03 Jan 2011)

  03 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17409.ebuild, +portage-2.2.01.17555.ebuild:
  Version bump, matches portage-2.2.0_alpha12

*portage-2.2.01.17422 (21 Dec 2010)

  21 Dec 2010; Fabian Groffen <grobian@gentoo.org>